# FinalProject

./: .gitignore  filter_pipeline.sh  report_maker.sh  visualization_pipeline.sh
Hifiasm/: .gitignore  CMakeLists.txt
Hifiasm/src/: hifiasm.cpp  snp_main.cpp
Hifiasm/src/overlap_sources/: overlap_source.hpp  overlap_source_factory.cpp  overlap_source_factory.hpp  pafPA_overlap_source.cpp  paf_overlap_source.cpp  ram_overlap_source.cpp
SNP_tool/: .gitignore  CMakeLists.txt  CMakePresets.json
SNP_tool/src/: snp_main.cpp  test.cpp
SNP_tool/src/overlap_sources/: astarpa.h  overlap_source.hpp  overlap_source_factory.cpp  overlap_source_factory.hpp  pafASPA_overlap_source.cpp  pafEDL_overlap_source.cpp  pafEdl_overlap_source.cpp  pafKSW2_overlap_source.cpp  pafM2_overlap_source.cpp  pafPA_overlap_source.cpp  pafWFA2_overlap_source.cpp  paf_overlap_source.cpp  ram_overlap_source.cpp
Scripts/: HifiasmRunAnalysis.py  InformativePositionsAnalysis.py  LogisticRegression.py  ModifiedPafParsers.py  P2S.py  TrueOverlapsTest.py  annotation_comparator.py  bad_file_generator.py  bedToIndex.py  changeCmaForDsh.py  chr19_maternal_GT_constructor.py  chr19_p_GT_constructor.py  chr19_snp_GT_constructor.py  classificationBenchmark.py  comparingSNP.py  createBed.py  filterDifferentCigars.py  filterReadNames.py  filterReadsOverlaps.py  herroToBed.py  herroToSNPAnno.py  homozygousPercent.py  mutation_mapper.py  mutator.py  overlap_GT_construct.py  readsNotInAnno.py  separateChr19Ref.py  snpBenchmark.py  snpPlot.py  tominimapPaf.py  vcfCheck.py
mutationSimulator/: mutation_mapper.py  mutation_reads.py  mutator.py  mutotator.py
